# S918_Dagster

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  __init__.py  coverage.xml  debug_staging_sql.py  install_dagster.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  start_dagster.sh
.github/workflows/: badge.yml  ci.yml  lint.yml  tests.yml
dagster_home/: dagster.yaml  workspace.yaml
data_quality_reports/: client_quality_20251231_144121.html  client_quality_20251231_144121.json  client_quality_20260101_194957.html  client_quality_20260101_194957.json  crn_quality_20260101_195000.html  crn_quality_20260101_195000.json  deppro_quality_20251231_161713.html  deppro_quality_20251231_161713.json  focondi_quality_20260101_194959.html  focondi_quality_20260101_194959.json  fournis_quality_20251231_143248.html  fournis_quality_20251231_143248.json  fournis_quality_20260101_194958.html  fournis_quality_20260101_194958.json  histoent_quality_20251231_143245.html  histoent_quality_20251231_143245.json  histolig_quality_20260101_195027.html  histolig_quality_20260101_195027.json  histolig_quality_20260101_201828.html  histolig_quality_20260101_201828.json  histolig_quality_20260101_203148.html  histolig_quality_20260101_203148.json  lignecli_quality_20251231_161647.html  lignecli_quality_20251231_161647.json  lignefou_quality_20251231_161629.html  lignefou_quality_20251231_161629.json  lisval_quality_20251231_144127.html  lisval_quality_20251231_144127.json  lisval_quality_20251231_145600.html  lisval_quality_20251231_145600.json  lisval_quality_20251231_145602.html  lisval_quality_20251231_145602.json  lisval_quality_20251231_145618.html  lisval_quality_20251231_145618.json  lisval_quality_20251231_150426.html  lisval_quality_20251231_150426.json  lisval_quality_20251231_150541.html  lisval_quality_20251231_150541.json  lisval_quality_20251231_150543.html  lisval_quality_20251231_150543.json  (+4 more)
src/: __init__.py  definitions.py
src/assets/: dbt_prep.py  ingestion.py  ods.py  raw.py  services.py  staging.py
src/config/: __init__.py  constants.py  settings.py
src/core/: materialization.py
src/core/ods/: hashdiff.py  merger.py  typing.py
src/core/raw/: archive.py  loader.py  quality.py
src/core/services/: currencies.py  time_dimension.py
src/core/sftp/: consolidator.py  parser.py  scanner.py
src/core/staging/: extent.py  hashdiff.py  transformer.py
src/db/: connection.py  metadata.py  monitoring.py
src/hooks/: alerting_hooks.py
src/jobs/: auxiliary.py  metadata_import.py  pipelines.py  recovery.py
src/monitoring/: anomalies.py  models.py  writer.py
src/ops/: __init__.py  dbt_generator.py  maintenance.py  metadata_import.py
src/resources/: postgres.py
src/schedules/: etl_schedules.py
src/sensors/: etl_monitoring_sensor.py  sftp_sensor.py
src/utils/: alerting.py  filename_parser.py  logging.py  metadata_utils.py  parallel_utils.py
tests/: conftest.py
tests/integration/: test_happy_path.py  test_pipeline.py
tests/unit/: test_extent.py  test_hashdiff.py  test_scanner.py  test_sftp_scanner.py
tests/unit/ods/: test_hashdiff.py  test_scd2_logic.py
tests/unit/sftp/: test_scanner.py
tests/unit/staging/: test_extent.py
workspace/assets/: ingestion.py  ods.py  services.py
workspace/jobs/: __init__.py  full_pipeline.py
workspace/ops/: metadata_ops.py  ods_ops.py  staging_ops.py
workspace/resources/: config.py
workspace/schedules/: etl_schedules.py
workspace_old_prefect_20251223/: __init__.py  definitions.py  utils
workspace_old_prefect_20251223/assets/: __init__.py  dbt_prep.py  ingestion.py
workspace_old_prefect_20251223/dbt/: etl_db
workspace_old_prefect_20251223/ops/: __init__.py  sftp_ops.py
workspace_old_prefect_20251223/partitions/: __init__.py  table_partitions.py
workspace_old_prefect_20251223/resources/: __init__.py  postgres.py
workspace_old_prefect_20251223/sensors/: __init__.py  sftp_sensor.py
